[workspace]
members = [ "rsky-common", "rsky-crypto","rsky-feedgen", "rsky-firehose", "rsky-identity", "rsky-labeler", "rsky-lexicon", "rsky-pds", "rsky-syntax", "rsky-jetstream-subscriber"]
resolver = "2"

[workspace.dependencies]
cargo = { version = "0.84.0",features = ["vendored-openssl"] }
rsky-lexicon = {path = "rsky-lexicon", version = "0.2.3"}
rsky-identity = {path = "rsky-identity", version = "0.1.0"}
rsky-crypto = {path = "rsky-crypto", version = "0.1.0"}
rsky-syntax = {path = "rsky-syntax", version = "0.1.0"}
rsky-common = {path = "rsky-common", version = "0.1.0"}

[profile.release]
debug = 2  # Or any level from 0 to 2
