[workspace]
members = [
  "rsky-common",
  "rsky-crypto",
  "rsky-feedgen",
  "rsky-firehose",
  "rsky-identity",
  "rsky-jetstream-subscriber",
  "rsky-labeler",
  "rsky-lexicon",
  "rsky-pds",
  "rsky-relay",
  "rsky-repo",
  "rsky-satnav",
  "rsky-syntax",
  "rsky-ingester",
  "rsky-indexer",
  "rsky-backfiller",
  "rsky-wintermute",
  "rsky-integration-tests",
]
resolver = "2"

[workspace.dependencies]
cargo = { version = "0.84.0",features = ["vendored-openssl"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "^1.0"
serde_ipld_dagcbor = {  version = "0.6.1" ,features = ["codec"]}
lexicon_cid = { package = "cid", version = "0.11.1", features = ["serde-codec"] }
ipld-core = "0.4.2"
serde_cbor = "0.11.2"
serde_bytes = "0.11.15"
tokio = { version = "1.28.2",features = ["full"] }
tokio-util = "0.7"
sha2 = "0.10.8"
rand = "0.8.5"
rand_core = "0.6.4"
secp256k1 = { version = "0.28.2", features = ["global-context", "serde", "rand", "hashes","rand-std"] }
serde_json = { version = "1.0.96",features = ["preserve_order"] }
rsky-lexicon = {path = "rsky-lexicon", version = "0.2.8"}
rsky-identity = {path = "rsky-identity", version = "0.1.0"}
rsky-crypto = {path = "rsky-crypto", version = "0.1.1"}
rsky-syntax = {path = "rsky-syntax", version = "0.1.0"}
rsky-common = {path = "rsky-common", version = "0.1.2"}
rsky-repo = {path = "rsky-repo", version = "0.0.2"}
rsky-firehose = {path = "rsky-firehose", version = "0.2.1"}

[profile.release]
debug = 2  # Or any level from 0 to 2

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
