[package]
name = "lexicon"
version = "0.1.0"
edition = "2021"
publish = false
description = "Bluesky API library"
homepage = "https://github.com/rudyfraser/rsky"
repository = "https://github.com/rudyfraser/rsky"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
derive_builder = "0.12.0"
miette = "5.8.0"
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_cbor = "0.11.2"
serde_derive = "^1.0"
serde_bytes = "0.11.9"
thiserror = "1.0.40"
cid = { version = "0.10.1", features = ["serde-codec"] }
