[package]
name = "rsky-backfiller"
version = "0.1.0"
edition = "2021"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "Rust implementation of Bluesky AppView repo backfiller"

[[bin]]
name = "backfiller"
path = "src/bin/backfiller.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "streams", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Workspace dependencies
rsky-repo = { workspace = true }
rsky-identity = { workspace = true }

# For repo verification and parsing
lexicon_cid = { workspace = true }
iroh-car = "0.5.1"

# Metrics
prometheus = "0.13"
lazy_static = "1.5"

# HTTP server for metrics
warp = "0.3"
