[package]
name = "rsky-carstore"
version = "0.1.0"
edition = "2021"

[dependencies]
lexicon_cid = {workspace = true}
rsky-common = {workspace = true}
rsky-repo = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = "2.0.11"
surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
chrono = "0.4.39"
slog = "2.7.0"
tracing = "0.1.41"
async-trait = "0.1.86"
unsigned-varint = "0.8.0"
