[package]
name = "rsky-common"
version = "0.1.2"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "Shared code for rsky"
license = "Apache-2.0"
edition = "2021"
publish = true
homepage = "https://blackskyweb.xyz"
repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-common"
documentation = "https://docs.rs/rsky-common"


[dependencies]
regex = "1.8.4"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
serde_ipld_dagcbor = { workspace = true }
anyhow = "1.0.79"
chrono = "0.4.39"
rand = {workspace = true}
rand_core = { workspace = true }
url = "2.5.4"
serde_json = "1.0.138"
tracing = "0.1.41" # @TODO: Remove anyhow in lib
rsky-identity = {workspace = true}
base64ct = "1.6.0"
urlencoding = "2.1.3"
futures = "0.3.28"
multihash = "0.19"
multihash-codetable = { version = "0.1.3",features = ["sha2"]}
indexmap = { version = "1.9.3",features = ["serde-1"] }
secp256k1 = {workspace = true}
sha2 = {workspace = true}
lexicon_cid = {workspace = true}

[dev-dependencies]
temp-env = { version = "0.3.6"}