[package]
name = "rsky-feedgen"
version = "0.0.1"
authors = ["him@rudyfraser.com"]
description = "A framework for building AT Protocol feed generators, in Rust."
license = "Apache-2.0"
edition = "2021"
publish = false
homepage = "https://github.com/blacksky-algorithms/rsky"
repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-feedgen"
documentation = "https://docs.rs/rsky-feedgen"

[dependencies]
rsky-lexicon = { path = "../rsky-lexicon" }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "^1.0"
serde_bytes = "0.11.9"
serde_ipld_dagcbor = "0.3.0"
serde_json = "1.0.96"
serde_cbor = "0.11.2"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
chrono = "0.4.26"
cid = { version = "0.10.1", features = ["serde-codec"] }
regex = "1.8.4"
lazy_static = "1.4.0"
base64 = "0.21.2"

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_postgres_pool"]

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
