[package]
name = "rsky-feedgen"
version = "1.0.0"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "A framework for building AT Protocol feed generators, in Rust."
license = "Apache-2.0"
edition = "2021"
publish = false
homepage = "https://blackskyweb.xyz"
repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-feedgen"
documentation = "https://docs.rs/rsky-feedgen"

[dependencies]
rsky-lexicon = { workspace = true }
rocket = { version = "=0.5.1", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "^1.0"
serde_bytes = "0.11.9"
serde_ipld_dagcbor = "0.3.0"
serde_json = "1.0.96"
serde_cbor = "0.11.2"
diesel = { version = "=2.1.5", features = ["chrono", "postgres"] }
dotenvy = "0.15"
chrono = "0.4.26"
regex = "1.8.4"
base64 = "0.21.2"
rand = "0.8.5"
once_cell = "1.19.0"

[dependencies.rocket_sync_db_pools]
version = "=0.1.0"
features = ["diesel_postgres_pool"]

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
temp-env = { version = "0.3.6",features = ["async_closure"] }
serial_test = "*"