[package]
name = "rsky-feedgen"
version = "1.1.4"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "A framework for building AT Protocol feed generators, in Rust."
license = "Apache-2.0"
edition = "2021"
publish = false
homepage = "https://blackskyweb.xyz"
repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-feedgen"
documentation = "https://docs.rs/rsky-feedgen"

[dependencies]
rsky-lexicon = { workspace = true }
rsky-common = { workspace = true }
rocket = { version = "=0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "^1.0"
serde_bytes = "0.11.19"
serde_ipld_dagcbor = "0.3.0"
serde_json = "1.0.149"
serde_cbor = "0.11.2"
diesel = { version = "~2.3.7", features = ["chrono", "postgres"] }
dotenvy = "0.15"
chrono = "0.4.44"
regex = "1.12.3"
base64 = "0.21.7"
rand = "0.8.5"
once_cell = "1.21.4"
moka = { version = "0.12", features = ["future"] }
chrono-tz = "0.10.4"
diesel_full_text_search = "2.3.0"

[dependencies.rocket_sync_db_pools]
version = "=0.1.0"
features = ["diesel_postgres_pool"]

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
temp-env = { version = "0.3.6",features = ["async_closure"] }
serial_test = "*"
