[package]
name = "rsky-firehose"
version = "0.0.1"
authors = ["him@rudyfraser.com"]
description = "A framework for subscribing to the AT Protocol firehose, in Rust."
license = "Apache-2.0"
edition = "2021"

[dependencies]
ciborium = "0.2.0"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
cid = { version = "0.10.1", features = ["serde-codec"] }
derive_builder = "0.12.0"
miette = "5.8.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.16", features = ["json", "rustls"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "^1.0"
serde_bytes = "0.11.9"
serde_ipld_dagcbor = "0.3.0"
serde_json = "1.0.96"
serde_cbor = "0.11.2"
thiserror = "1.0.40"
dotenvy = "0.15.7"