[package]
name = "rsky-firehose"
version = "0.1.1"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "A framework for subscribing to the AT Protocol firehose, in Rust."
license = "Apache-2.0"
edition = "2021"
publish = true
homepage = "https://blackskyweb.xyz"
repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-firehose"
documentation = "https://docs.rs/rsky-firehose"

[dependencies]
rsky-lexicon = { workspace = true }
ciborium = "0.2.0"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
derive_builder = "0.12.0"
miette = "5.8.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.16", features = ["json", "rustls"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "^1.0"
serde_bytes = "0.11.9"
serde_ipld_dagcbor = "0.6.1"
serde_json = "1.0.96"
serde_cbor = "0.11.2"
thiserror = "1.0.40"
dotenvy = "0.15.7"
retry = "2.0.0"
anyhow = "1.0.81"
libipld = { version = "0.16.0", features = ["serde-codec"] }
