[package]
name = "rsky-firehose"
version = "0.2.1"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "A framework for subscribing to the AT Protocol firehose, in Rust."
license = "Apache-2.0"
edition = "2021"
publish = false
homepage = "https://blackskyweb.xyz"
repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-firehose"
documentation = "https://docs.rs/rsky-firehose"

[dependencies]
rsky-lexicon = { workspace = true }
lexicon_cid = {workspace = true}
ciborium = "0.2.2"
futures = "0.3.32"
tokio = { version = "1.51.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.5.8"
chrono = { version = "0.4.44", features = ["serde"] }
derive_builder = "0.12.0"
miette = "5.10.0"
parking_lot = "0.12.5"
reqwest = { version = "0.11.27", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "^1.0"
serde_bytes = "0.11.19"
serde_ipld_dagcbor = "0.6.4"
serde_json = "1.0.149"
serde_cbor = "0.11.2"
thiserror = "1.0.69"
dotenvy = "0.15.7"
retry = "2.2.0"
anyhow = "1.0.102"
multihash = "0.19"
