[package]
name = "rsky-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
deadpool-postgres = "0.13"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Workspace crates for integration tests
rsky-ingester = { path = "../rsky-ingester" }
rsky-indexer = { path = "../rsky-indexer" }
rsky-backfiller = { path = "../rsky-backfiller" }
rsky-identity = { path = "../rsky-identity" }
