[package]
name = "rsky-labeler"
version = "0.1.2"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "AT Protocol firehose subscriber that labels content for a moderation service."
license = "Apache-2.0"
edition = "2021"
publish = false
homepage = "https://blackskyweb.xyz"
repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-labeler"
documentation = "https://docs.rs/rsky-labeler"

[dependencies]
rsky-lexicon = { workspace = true }
rsky-common = { workspace = true }
ciborium = "0.2.0"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
chrono = { version = "0.4.24", features = ["serde"] }
derive_builder = "0.20.2"
miette = "7.4.0"
parking_lot = "0.12.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "^1.0"
serde_bytes = "0.11.9"
serde_ipld_dagcbor = "0.6.1"
serde_json = "1.0.96"
serde_cbor = "0.11.2"
thiserror = "2.0.9"
dotenvy = "0.15.7"
retry = "2.0.0"
anyhow = "1.0.81"
libipld = { version = "0.16.0", features = ["serde-codec"] }
atrium-api = { version = "0.24.6", features = ["namespace-toolsozone"] }
atrium-xrpc-client = "0.5.8"
atrium-ipld = {package = "ipld-core", version = "0.4.1"}
