[package]
name = "rsky-oauth-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3", features = ["console"] }
gloo = "0.11.0"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"