[package]
name = "rsky-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
http = "1.2.0"
jsonwebtoken = "9.3.1"
once_cell = "1.20.3"
regex = "1.11.1"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.11"
url = "2.5.4"
urlencoding = "2.1.3"
rocket = "0.5.1"
tokio = "1.42.0"
tracing = "0.1.41"
anyhow = "1.0.97"
hex = "0.4.3"
rand = "0.8.5"
ring = "0.17.8"
serde_urlencoded = "0.7.1"
