[package]
name = "rsky-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
http = "1.2.0"
once_cell = "1.20.3"
sha2 = "0.11.0-pre.5"
regex = "1.11.1"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.11"
url = "2.5.4"
urlencoding = "2.1.3"
rocket = { version = "0.5.1", features = ["json"] }
tokio = "1.42.0"
tracing = "0.1.41"
anyhow = "1.0.97"
hex = "0.4.3"
rand = "0.9.0"
ring = "0.17.8"
serde_urlencoded = "0.7.1"
lru = "0.13.0"
reqwest = { version = "0.12.15", features = ["json"] }
base64ct = { version = "1.7.3", features = ["alloc"] }
jsonwebtoken = "9.3.1"