[package]
name = "rsky-oauth"
version = "0.1.0"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "OAuth provider core (JOSE, JWK, DPoP) for AT Protocol services"
license = "Apache-2.0"
edition = "2021"
publish = false
homepage = "https://blackskyweb.xyz"
repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-oauth"

[dependencies]
base64 = "0.22"
hmac = "0.12"
p256 = { version = "0.13.2", features = ["ecdsa"] }
rsky-crypto = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = "2.0.11"
url = "2.5.4"
