[package]
name = "rsky-pds"
version = "0.1.1"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "Rust reference implementation of an atproto PDS."
license = "Apache-2.0"
edition = "2021"
publish = false
homepage = "https://blackskyweb.xyz"
repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-pds"
documentation = "https://docs.rs/rsky-pds"

[dependencies]
anyhow = "1.0.79"
argon2 = "0.5.3"
async-event-emitter = "0.1.3"
atrium-api = "0.24.6"
# atrium-ipld = { package = "ipld-core", version = "0.4.1" }
atrium-xrpc-client = "0.5.8"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.29.0"
base64 = "0.22.0"
base64-url = "2.0.2"
base64ct = "1.6.0"
chrono = "0.4.26"
data-encoding = "2.5.0"
diesel = { version = "=2.1.5", features = ["chrono", "postgres"] }
dotenvy = "0.15"
email_address = "0.2.4"
event-emitter-rs = "0.1.4"
futures = "0.3.28"
hex = "0.4.3"
image = "0.25.1"
indexmap = { version = "1.9.3", features = ["serde-1"] }
infer = "0.15.0"
ipld-core = { workspace = true }
jwt-simple = { version = "0.12.9", default-features = false, features = ["pure-rust"] }
lazy_static = "1.4.0"
lexicon_cid = { workspace = true }
mailchecker = "6.0.1"
mailgun-rs = "0.1.10"
rand = { workspace = true }
rand_core = { workspace = true }
regex = "1.10.3"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
rocket = { version = "=0.5.1", features = ["json", "tls"] }
rsky-common = { workspace = true }
rsky-crypto = { workspace = true }
rsky-identity = { workspace = true }
rsky-lexicon = { workspace = true }
rsky-repo = { workspace = true }
rsky-syntax = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_derive = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
sha2 = { workspace = true }
thiserror = "1.0.40"
time = "^0.3.36"
tokio = { workspace = true }
toml = "0.8.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.2"
ws = { package = "rocket_ws", version = "0.1.1" }


[dev-dependencies]
testcontainers = "0.23.2"
testcontainers-modules = { version = "0.11.6", features = ["postgres", "blocking"] }
diesel_migrations = {version = "2.1.0", features = ["postgres"]}
http-auth-basic = { version = "0.3.5" }

[dependencies.rocket_sync_db_pools]
version = "=0.1.0"
features = ["diesel_postgres_pool"]


