[package]
name = "rsky-pds"
version = "0.1.1"
authors = ["Rudy Fraser <him@rudyfraser.com>"]
description = "Rust reference implementation of an atproto PDS."
license = "Apache-2.0"
edition = "2021"
publish = false
homepage = "https://blackskyweb.xyz"
repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-pds"
documentation = "https://docs.rs/rsky-pds"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
async-event-emitter = "0.1.5"
atrium-api = "0.24.10"
# atrium-ipld = { package = "ipld-core", version = "0.4.1" }
atrium-xrpc-client = "0.5.15"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.128.0"
base64 = "0.22.1"
base64-url = "2.0.2"
base64ct = "1.8.3"
chrono = "0.4.44"
data-encoding = "2.10.0"
diesel = { version = "~2.3.7", features = ["chrono", "postgres"] }
dotenvy = "0.15"
email_address = "0.2.9"
event-emitter-rs = "0.1.4"
futures = "0.3.32"
hex = "0.4.3"
image = "0.25.10"
indexmap = { version = "1.9.3", features = ["serde-1"] }
infer = "0.15.0"
ipld-core = { workspace = true }
jwt-simple = { version = "0.12.14", default-features = false, features = ["pure-rust"] }
lazy_static = "1.5.0"
lexicon_cid = { workspace = true }
mailchecker = "6.0.20"
mailgun-rs = "0.1.12"
rand = { workspace = true }
rand_core = { workspace = true }
regex = "1.12.3"
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
rocket = { version = "=0.5.1", features = ["json", "tls"] }
rsky-common = { workspace = true }
rsky-crypto = { workspace = true }
rsky-identity = { workspace = true }
rsky-lexicon = { workspace = true }
rsky-repo = { workspace = true }
rsky-syntax = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_derive = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
sha2 = { workspace = true }
thiserror = "1.0.69"
time = "^0.3.47"
tokio = { workspace = true }
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
ws = { package = "rocket_ws", version = "0.1.1" }


[dev-dependencies]
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["postgres", "blocking"] }
diesel_migrations = {version = "2.3.1", features = ["postgres"]}
http-auth-basic = { version = "0.3.7" }

[dependencies.rocket_sync_db_pools]
version = "=0.1.0"
features = ["diesel_postgres_pool"]


