[package]
name = "rsky-pdsadmin"
version = "0.1.0"
edition = "2024"
description = "Administrative CLI tool for rsky-pds"
authors = ["RSKY Team"]
license = "MIT"

#[workspace]

[lib]
name = "rsky_pdsadmin"
path = "src/lib.rs"

[[bin]]
name = "pdsadmin"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
diesel = { workspace = true }
diesel_cli = { workspace = true, optional = true }
diesel_migrations = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
db_cli = ["diesel_cli"]
